[tickets] add service find , tests